--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,11 @@
 
           <ul class="navbar-nav ml-auto">
             
-            <!--<li>-->
-            <!--  <#%= link_to users_path(current_user),class: 'nav-link text-nowrap text-light' do %>-->
-            <!--    <p style="color:#F6E8E8;"><i class="fas fa-info-circle"></i> マイページ</p>-->
-            <!--  <#% end %>-->
-            <!--</li>-->
+            <li>
+              <%= link_to user_path(current_user),class: 'nav-link text-nowrap text-light' do %>
+                <p style="color:#F6E8E8;"><i class="fas fa-info-circle"></i> マイページ</p>
+              <% end %>
+            </li>
             <li>
               <%=  link_to new_post_path,class: 'nav-link text-nowrap text-light' do %>
                 <p style="color:#F6E8E8;"><i class="fas fa-birthday-cake"></i> 新規投稿</p>
@@ -40,21 +40,21 @@
 
         <% elsif admin_signed_in? %><!--管理者-->
           <ul class="navbar-nav ml-auto">
-            <li>
-              <%= link_to admin_posts_path,class: 'nav-link text-nowrap text-light' do %>
-                <p style="color:#F6E8E8;">投稿一覧</p>
-              <% end %>
-            </li>
-            <li>
-              <%=  link_to admin_users_path,class: 'nav-link text-nowrap text-light' do %>
-                <p style="color:#F6E8E8;">会員一覧</p>
-              <% end %>
-            </li>
-            <li>
-              <%=  link_to admin_root_path ,class: 'nav-link text-nowrap text-light' do %>
-                <p style="color:#F6E8E8;">注文履歴一覧</p>
-              <% end %>
-            </li>
+            <!--<li>-->
+            <!--  <#%= link_to admin_posts_path,class: 'nav-link text-nowrap text-light' do %>-->
+            <!--    <p style="color:#F6E8E8;">投稿一覧</p>-->
+            <!--  <#% end %>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--  <#%=  link_to admin_users_path,class: 'nav-link text-nowrap text-light' do %>-->
+            <!--    <p style="color:#F6E8E8;">会員一覧</p>-->
+            <!--  <#% end %>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--  <#%=  link_to admin_root_path ,class: 'nav-link text-nowrap text-light' do %>-->
+            <!--    <p style="color:#F6E8E8;">注文履歴一覧</p>-->
+            <!--  <#% end %>-->
+            <!--</li>-->
             <li>
               <%= link_to destroy_admin_session_path, method: :delete,class: 'nav-link text-nowrap text-light' do %>
                 <p style="color:#F6E8E8;">ログアウト</p>
