--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
         <p class="ml-1" style="color:#F6E8E8; text-left">ようこそ、<%= current_user.name %>さん!</p>
 
           <ul class="navbar-nav ml-auto">
-            
+
             <li>
               <%= link_to user_path(current_user),class: 'nav-link text-nowrap text-light' do %>
                 <p style="color:#F6E8E8;"><i class="fas fa-info-circle"></i> マイページ</p>
@@ -40,33 +40,33 @@
 
         <% elsif admin_signed_in? %><!--管理者-->
           <ul class="navbar-nav ml-auto">
-            <!--<li>-->
-            <!--  <#%= link_to admin_posts_path,class: 'nav-link text-nowrap text-light' do %>-->
-            <!--    <p style="color:#F6E8E8;">投稿一覧</p>-->
-            <!--  <#% end %>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--  <#%=  link_to admin_users_path,class: 'nav-link text-nowrap text-light' do %>-->
-            <!--    <p style="color:#F6E8E8;">会員一覧</p>-->
-            <!--  <#% end %>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--  <#%=  link_to admin_root_path ,class: 'nav-link text-nowrap text-light' do %>-->
-            <!--    <p style="color:#F6E8E8;">注文履歴一覧</p>-->
-            <!--  <#% end %>-->
-            <!--</li>-->
+            <li>
+              <%= link_to admin_posts_path,class: 'nav-link text-nowrap text-light' do %>
+                <p style="color:#F6E8E8;">投稿一覧</p>
+              <% end %>
+            </li>
+            <li>
+              <%=  link_to admin_users_path,class: 'nav-link text-nowrap text-light' do %>
+                <p style="color:#F6E8E8;">会員一覧</p>
+              <% end %>
+            </li>
+            <li>
+              <%=  link_to admin_post_comments_path ,class: 'nav-link text-nowrap text-light' do %>
+                <p style="color:#F6E8E8;">コメント一覧</p>
+              <% end %>
+            </li>
             <li>
               <%= link_to destroy_admin_session_path, method: :delete,class: 'nav-link text-nowrap text-light' do %>
                 <p style="color:#F6E8E8;">ログアウト</p>
               <% end %>
             </li>
           </ul>
-          
+
 
         <% else %><!--未登録-->
           <ul class="navbar-nav ml-auto">
             <li>
-              <%= link_to homes_about_path,class: 'nav-link text-nowrap text-light' do %>
+              <%= link_to public_homes_about_path,class: 'nav-link text-nowrap text-light' do %>
                 <p style="color:#F6E8E8;"><i class="fas fa-store"></i>About</p>
               <% end %>
             </li>
