--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,64 +1,83 @@
-<div class="container pt-5 pb-5">
-  <div class="row">
-    <div class="md-3">
-      <h4>投稿詳細</h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <%= image_tag @post.image, size:'100x100' %>
-  </div>
-  <div class="col-md-9">
-    <table class="table">
-      <tbody>
-        <tr>
-          <td><label>場所</label></td>
-          <td><%= @post.place %></td>
-        </tr>
-        <tr>
-          <td><label>説明</label></td>
-          <td><%= @post.description %></td>
-        </tr>
-        <tr>
-          <td><label>地域</label></td>
-          <td><%= @post.category.name %></td>
-        </tr>
-
-
-      </tbody>
-    </table>
-    <div class="mt-3 text-center">
-      <!--<#%= link_to ' 編集する ', edit_public_post_path(@post), class: "btn btn-lg btn-success" %>-->
-    </div>
-  </div>
-  </div>
-</div>
-
-
-  <% if @post.favorited_by?(current_user) %>
-    <p>
-      <%= link_to post_favorites_path(@post), method: :delete do %>
-        ♥<%= @post.favorites.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to post_favorites_path(@post), method: :post do %>
-        ♡<%= @post.favorites.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
+<div class="container bootstrap snippets bootdey">
+    <di class="col-md-8">
+        <div class="col-sm-12">
+            <div class="panel panel-white post panel-shadow">
+                <div class="post-heading">
+                    <div class="pull-left meta">
+                        <div class="title h5">
+                            投稿者<b><%= @post.user.name %></b>
+                        </div>
+                        <h6 class="text-muted time"><%= @post.updated_at %></h6>
+                        <% if @post.user == current_user %>
+                        <%= link_to "編集" , edit_post_path,class: "btn btn-sm btn-success" %>
+                        <% end %>
+                        <% if @post.user == current_user %>    
+                        <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-sm btn-danger", "data-confirm" => "削除しますか？" %>
+                        <% end %>
+                    </div>
+                </div>
+                <div class="post-image">
+                    <%= image_tag @post.image, size:'100%x100%' %>
+                </div>
+                <div class="post-description">
+                    <h4><%= @post.category.name %>:<%= @post.place %></h4>
+                    <p><%= @post.description %></p>
+                    <div class="stats">
+                    <p>コメント件数：<%= @post.post_comments.count %></p>
+                    <% if @post.favorited_by?(current_user) %>
+                      <p>
+                        <%= link_to post_favorites_path(@post), method: :delete do %>
+                          ♥<%= @post.favorites.count %> いいね
+                        <% end %>
+                      </p>
+                        <% else %>
+                      <p>
+                         <%= link_to post_favorites_path(@post), method: :post do %>
+                           ♡<%= @post.favorites.count %> いいね
+                        <% end %>
+                      </p>
+                    <% end %>
+                    </div>
+                </div>
+                <div class="post-footer">
+                    <div class="input-group"> 
   
-  <div>
-  <p>コメント件数：<%= @post.post_comments.count %></p>
-  <% @post.post_comments.each do |post_comment| %>
-    <%= post_comment.user.name %>
-    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-  <% end %>
-</div>
-<div>
-  <%= form_with model: [@post, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
-  <% end %>
+                          <%= form_with model: [@post, @post_comment] do |f| %>
+                          <%= f.text_area :comment, placeholder: "コメントをここに" %>
+                          <%= f.submit "送信する" %>
+                          <% end %>
+                          
+                    </div>
+<table class='table table-hover table-inverse'>
+  <thead>
+    <tr>
+      <th>user</th>
+      <th>コメント</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @post.post_comments.each do |post_comment| %>
+      <tr>
+        <td>
+          <%= post_comment.user.name %>
+        </td>
+        <td>
+          <%= post_comment.comment %>
+        </td>
+        <td>
+        <div class="mt-3 text-center">
+          <% if post_comment.user == current_user %>
+            <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
+          <% end %>
+        </div>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+                </div>
+            </div>
+        </div>
+    </di>
 </div>
