--- a/app/views/admin/post_comments/index.html.erb
+++ b/app/views/admin/post_comments/index.html.erb
@@ -26,7 +26,7 @@
         <td>
         <div class="mt-3 text-center">
           <div>
-            <%= link_to "削除", admin_post_comments_path(@post, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
+            <%= link_to "削除", admin_post_comment_path(post_comment), method: :delete, class: "btn btn-danger pull-right" %>
             <!--<#%= link_to "不適切な投稿の削除", admin_post_comments_path(@post_comment), method: :delete, class: "btn btn-danger", "data-confirm" => "不適切な投稿として削除しますか？" %>-->
           </div>
         </div>
