--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,10 +1,20 @@
 <div class="row">
   <div class="col d-flex justify-content-center align-items-center">
+    <h4>
+      <% if params[:category_id].present? %>
+        <%= @category.name %>
+      <% elsif params[:place_key].present? %>
+        <%= params[:place_key] %>
+      <% else %>
+        すべての投稿
+      <% end %>
+    </h4>
+      
     <%= form_with url:'/posts', method: :get, local: true do |f| %>
-      <%= f.label :place_key, 'Category' %>
       <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "地域" %>
       <%= f.submit 'Search' %>
     <% end %>
+    
   </div>
   
   <div class="col d-flex justify-content-center align-items-center">
@@ -53,3 +63,9 @@
     <% end %>
   </tbody>
 </table>
+
+    <div class="footer container col-md-6 offset-md-3 py-2">
+      <div class="pagination justify-content-center">
+        <%= paginate @posts %>
+      </div>
+    </div>
