--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,3 +1,7 @@
+<div class="row pb-5">
+  <div class="col-10 mx-auto">
+    <h4><strong>投稿一覧(全<%= @post_count %>件)</strong></h4>
+
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
@@ -12,7 +16,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td>
-          <%= image_tag post.image, size:'100x100' %>
+          <%= image_tag post.image, size:'50x50' %>
         </td>
         <td>
           <%= post.user.name %>
@@ -29,3 +33,12 @@
     <% end %>
   </tbody>
 </table>
+
+  </div>
+</div>
+
+<div class="footer container col-md-6 offset-md-3 py-2">
+  <div class="pagination justify-content-center">
+    <%= paginate @posts %>
+  </div>
+</div>
