--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -29,15 +29,16 @@
         <table>
           <% @posts.each do |post| %>
         <tr>
-          <td>
+          <ul class="list-group">
+            <li class="list-group-item">
             <%= link_to post_path(post.id) do %>
             <%= post.place %>
             <% end %>
-          </td>
+            </li>
+          </ul>
         </tr>
         <% end %>
         </table>
-        <%= paginate @posts %>
       </div>
     
       <div class="col">
@@ -45,16 +46,23 @@
         <table>
           <% @favorites.each do |favorite| %>
         <tr>
-          <td>
+          <ul class="list-group">
+            <li class="list-group-item">
             <%= link_to post_path(favorite.post.id) do %>
             <%= favorite.post.place %>
             <% end %>
-          </td>
+            </li>
+          </ul>
         </tr>
         <% end %>
         </table>
-        <%= paginate @favorites %>
         </div>
       </div>
+      
+    <div class="footer container col-md-6 offset-md-3 py-2">
+      <div class="pagination justify-content-center">
+        <%= paginate @posts %>
+      </div>
+    </div>
       
 
