--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -23,11 +23,11 @@
         </td>
         <td>
           <%= link_to admin_post_path(post.id) do %>
-            <%= post.place %>
+            <%= post.place.truncate(12) %>
           <% end %>
         </td>
         <td>
-          <%= post.description %>
+          <%= post.description.truncate(12) %>
         </td>
       </tr>
     <% end %>
