--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,17 +1,23 @@
 <div class="container pb-5">
     <div class="text-center">
-      <h1 class="display-2">About</h1>
+      <h1 class="display-2">これも、旅だよな?</h1>
     </div>
 
     <div class="text-center">
-        <h4>コレタビへ、ようこそ！</br>
-        旅先で撮影した写真を
+        <h4>コレタビへようこそ！</br>
+        このサイトは旅先で撮影した写真を
         共有するサイトです！</br>
-        あなただけの
-        素敵な場所を共有しましょう！</br>
+        北海道の最北端や
+        近所のコンビニも！<br>
+        あなたの旅を投稿しよう!</br>
         </h4>
     </div>
-
-
-
 </div>
+
+<body>
+  <div class="container">
+    <div class="bg-info d-flex align-items-center justify-content-center" style="height:684px;">
+      <h1>#</h1><%= image_tag 'koretabi.png' %>
+    </div>
+  </div>
+</body>
