--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -9,16 +9,17 @@
                         </div>
                         <h6 class="text-muted time"><%= @post.updated_at %></h6>
                         <% if @post.user == current_user %>
-                        <%= link_to "編集" , edit_post_path,class: "btn btn-sm btn-success" %>
+                          <%= link_to "編集" , edit_post_path,class: "btn btn-sm btn-success" %>
                         <% end %>
                         <% if @post.user == current_user %>    
-                        <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-sm btn-danger", "data-confirm" => "削除しますか？" %>
+                          <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-sm btn-danger", "data-confirm" => "削除しますか？" %>
                         <% end %>
                     </div>
                 </div>
                 <div class="post-image">
-                    <%= image_tag @post.image, size:'100%x100%' %>
+                  <%= image_tag @post.image, size:'600x400' %>
                 </div>
+                <% if user_signed_in? %>
                 <div class="post-description">
                     <h4><%= @post.category.name %>:<%= @post.place %></h4>
                     <p><%= @post.description %></p>
@@ -40,42 +41,42 @@
                     </div>
                 </div>
                 <div class="post-footer">
-                    <div class="input-group"> 
-  
-                          <%= form_with model: [@post, @post_comment] do |f| %>
-                          <%= f.text_area :comment, placeholder: "コメントをここに" %>
-                          <%= f.submit "送信する" %>
-                          <% end %>
-                          
-                    </div>
-<table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th>user</th>
-      <th>コメント</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @post.post_comments.each do |post_comment| %>
-      <tr>
-        <td>
-          <%= post_comment.user.name %>
-        </td>
-        <td>
-          <%= post_comment.comment %>
-        </td>
-        <td>
-        <div class="mt-3 text-center">
-          <% if post_comment.user == current_user %>
-            <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
-          <% end %>
-        </div>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                  
+                  <div class="input-group"> 
+                    <%= form_with model: [@post, @post_comment] do |f| %>
+                      <%= f.text_area :comment, placeholder: "コメントをここに" %>
+                      <%= f.submit "送信する" %>
+                    <% end %>
+                  </div>
+                  <% end %>
+                    <table class='table table-hover table-inverse'>
+                      <thead>
+                        <tr>
+                          <th>user</th>
+                          <th>コメント</th>
+                          <th colspan="3"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <% @post.post_comments.each do |post_comment| %>
+                        <tr>
+                          <td>
+                            <%= post_comment.user.name %>
+                          </td>
+                          <td>
+                            <%= post_comment.comment %>
+                          </td>
+                          <td>
+                            <div class="mt-3 text-center">
+                            <% if post_comment.user == current_user %>
+                              <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
+                            <% end %>
+                            </div>
+                          </td>
+                        </tr>
+                        <% end %>
+                      </tbody>
+                    </table>
                 </div>
             </div>
         </div>
