--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -80,7 +80,7 @@
       #map { height: 100% }
     </style>
 
-    <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY']%>&callback=init"
         type="text/javascript" charset="UTF-8"></script>
 
     <script type="text/javascript">
