--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -11,7 +11,7 @@
                         <% if @post.user == current_user %>
                           <%= link_to "編集" , edit_post_path,class: "btn btn-sm btn-success" %>
                         <% end %>
-                        <% if @post.user == current_user %>    
+                        <% if @post.user == current_user %>
                           <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-sm btn-danger", "data-confirm" => "削除しますか？" %>
                         <% end %>
                     </div>
@@ -41,8 +41,8 @@
                     </div>
                 </div>
                 <div class="post-footer">
-                  
-                  <div class="input-group"> 
+
+                  <div class="input-group">
                     <%= form_with model: [@post, @post_comment] do |f| %>
                       <%= f.text_area :comment, placeholder: "コメントをここに" %>
                       <%= f.submit "送信する" %>
@@ -52,14 +52,18 @@
                     <table class='table table-hover table-inverse'>
                       <thead>
                         <tr>
+                          <th>投稿日</th>
                           <th>user</th>
                           <th>コメント</th>
                           <th colspan="3"></th>
                         </tr>
                       </thead>
                       <tbody>
-                        <% @post.post_comments.each do |post_comment| %>
+                        <% @post_comments.each do |post_comment| %>
                         <tr>
+                          <td>
+                            <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+                          </td>
                           <td>
                             <%= post_comment.user.name %>
                           </td>
@@ -82,3 +86,9 @@
         </div>
     </di>
 </div>
+
+    <div class="footer container col-md-6 offset-md-3 py-2">
+      <div class="pagination justify-content-center">
+        <%= paginate @post_comments %>
+      </div>
+    </div>
