--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -23,73 +23,76 @@
                   <h4><%= @post.category.name %>:<%= @post.place %></h4>
                   <p><%= @post.description %></p>
                   <div class="stats">
-                  <p>コメント件数：<%= @post.post_comments.count %></p>
-                  <% if user_signed_in? %>
-                  
-                    <% if @post.favorited_by?(current_user) %>
-                      <p>
-                        <%= link_to post_favorites_path(@post), method: :delete do %>
-                          ♥<%= @post.favorites.count %> いいね
-                        <% end %>
-                      </p>
-                        <% else %>
-                      <p>
-                         <%= link_to post_favorites_path(@post), method: :post do %>
-                         ♡<%= @post.favorites.count %> いいね
-                         <% end %>
-                      </p>
+                    <p>コメント件数：<%= @post.post_comments.count %></p>
+                    <!--ゲストユーザー閲覧-->
+                    <% if user_signed_in? %>
+                      <% if @post.favorited_by?(current_user) %>
+                        <p>
+                          <%= link_to post_favorites_path(@post), method: :delete do %>
+                            ♥<%= @post.favorites.count %> いいね
+                          <% end %>
+                        </p>
+                          <% else %>
+                        <p>
+                          <%= link_to post_favorites_path(@post), method: :post do %>
+                            ♡<%= @post.favorites.count %> いいね
+                          <% end %>
+                        </p>
+                      <% end %>
                     <% end %>
                   </div>
                 </div>
                 <div class="post-footer">
                   <div class="input-group">
-                    <%= form_with model: [@post, @post_comment] do |f| %>
-                      <%= f.text_area :comment, placeholder: "コメントをここに" %>
-                      <%= f.submit "送信する" %>
+                    <!--ゲストユーザー閲覧-->
+                    <% if user_signed_in? %>
+                      <%= form_with model: [@post, @post_comment] do |f| %>
+                        <%= f.text_area :comment, placeholder: "コメントをここに" %>
+                        <%= f.submit "送信する" %>
+                      <% end %>
                     <% end %>
                   </div>
-                  
-                  <% end %>
-                    <table class='table table-hover table-inverse'>
-                      <thead>
-                        <tr>
-                          <th>投稿日</th>
-                          <th>user</th>
-                          <th>コメント</th>
-                          <th colspan="3"></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <% @post_comments.each do |post_comment| %>
-                        <tr>
-                          <td>
-                            <%= post_comment.created_at.strftime('%Y/%m/%d') %>
-                          </td>
-                          <td>
-                            <%= post_comment.user.name %>
-                          </td>
-                          <td>
-                            <%= post_comment.comment %>
-                          </td>
-                          <td>
-                            <div class="mt-3 text-center">
+                  <table class='table table-hover table-inverse'>
+                    <thead>
+                      <tr>
+                        <th>投稿日</th>
+                        <th>user</th>
+                        <th>コメント</th>
+                        <th colspan="3"></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% @post_comments.each do |post_comment| %>
+                      <tr>
+                        <td>
+                          <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+                        </td>
+                        <td>
+                          <%= post_comment.user.name %>
+                        </td>
+                        <td>
+                          <%= post_comment.comment %>
+                        </td>
+                        <td>
+                          <div class="mt-3 text-center">
                             <% if post_comment.user == current_user %>
                               <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
                             <% end %>
-                            </div>
-                          </td>
-                        </tr>
-                        <% end %>
-                      </tbody>
-                    </table>
+                          </div>
+                        </td>
+                      </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
                 </div>
             </div>
         </div>
     </di>
 </div>
 
-    <div class="footer container col-md-6 offset-md-3 py-2">
-      <div class="pagination justify-content-center">
-        <%= paginate @post_comments %>
-      </div>
-    </div>
+    <!--ページネーション-->
+<div class="footer container col-md-6 offset-md-3 py-2">
+  <div class="pagination justify-content-center">
+    <%= paginate @post_comments %>
+  </div>
+</div>
