--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -26,19 +26,9 @@
                     <p>コメント件数：<%= @post.post_comments.count %></p>
                     <!--ゲストユーザー閲覧-->
                     <% if user_signed_in? %>
-                      <% if @post.favorited_by?(current_user) %>
-                        <p>
-                          <%= link_to post_favorites_path(@post), method: :delete do %>
-                            ♥<%= @post.favorites.count %> いいね
-                          <% end %>
-                        </p>
-                          <% else %>
-                        <p>
-                          <%= link_to post_favorites_path(@post), method: :post do %>
-                            ♡<%= @post.favorites.count %> いいね
-                          <% end %>
-                        </p>
-                      <% end %>
+                      <div id="favorite_buttons_<%= @post.id %>">
+                        <%= render "public/favorites/favorite", post: @post %>
+                      </div>
                     <% end %>
                   </div>
                 </div>
